<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:id="@+id/review_fragment"
              android:visibility="visible"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/reviewArea">
        <TextView
                style="@style/review_labels"
                android:text="@string/author_label"
                android:id="@+id/author_label" />
        <TextView
                style="@style/review_names"
                android:id="@+id/author_name" />
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/reviewContent">
        <TextView
                style="@style/review_labels"
                android:text="@string/review_description"
                android:id="@+id/content_label" />
        <TextView
                style="@style/review_names"
                android:id="@+id/content_name"
        />
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:id="@+id/reviewUrl">
        <TextView
                style="@style/review_labels"
                android:text="@string/review_url"
                android:id="@+id/url_label"
        />
        <TextView
                style="@style/review_names"
                android:id="@+id/url_name"
                android:autoLink="web"
        />
    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@android:color/black"
    />
</LinearLayout>